k8s/base/namespace.yaml
# Namespaces
# Generated by Rig CLI

apiVersion: v1
kind: Namespace
metadata:
  name: devops-cli
  labels:
    generated-by: rig-cli
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-cli-staging
  labels:
    generated-by: rig-cli
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-cli-prod
  labels:
    generated-by: rig-cli
---
